# mycelium

./: .gitignore  .rust-toolchain  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  cliff.toml  default.nix  justfile  netlify.toml  release.toml  rust-toolchain.toml  shell.nix  x86_64-mycelium.json
alloc/: Cargo.toml
alloc/src/: buddy.rs  bump.rs  lib.rs  sharded.rs
async/: Cargo.toml
async/src/: lib.rs  loom.rs  scheduler.rs  task.rs  util.rs  wait.rs
async/src/task/: allocation.rs  state.rs  task_list.rs  waker.rs
async/src/wait/: cell.rs
bitfield/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
bitfield/proptest-regressions/: pack.txt
bitfield/src/: bitfield.rs  example.rs  from_bits.rs  lib.rs  pack.rs
bitfield/src/example/: example_bitfield.rs
cordyceps/: CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml
cordyceps/proptest-regressions/: list.txt
cordyceps/proptest-regressions/list/: tests.txt
cordyceps/src/: lib.rs  list.rs  loom.rs  mpsc_queue.rs  sorted_list.rs  stack.rs  transfer_stack.rs  util.rs
cordyceps/src/list/: cursor.rs  shared_push.rs  tests.rs
cordyceps/src/list/tests/: cursor.rs  iter_raw.rs  owned_entry.rs  remove_by_addr.rs
hal-core/: Cargo.toml
hal-core/src/: addr.rs  boot.rs  cpu.rs  framebuffer.rs  interrupt.rs  lib.rs  local.rs  mem.rs
hal-core/src/framebuffer/: embedded_graphics.rs
hal-core/src/interrupt/: ctx.rs  lock.rs  mod.rs  vectors.rs
hal-core/src/mem/: frame.rs  mod.rs  page.rs
hal-core/src/mem/page/: alloc.rs  mod.rs
hal-x86_64/: Cargo.toml
hal-x86_64/proptest-regressions/: segment.txt
hal-x86_64/src/: control_regs.rs  cpu.rs  framebuffer.rs  interrupt.rs  lib.rs  log.rs  mm.rs  page.rs  segment.rs  serial.rs  task.rs  time.rs  tracing.rs  vga.rs
hal-x86_64/src/cpu/: entropy.rs  intrinsics.rs  local.rs  local_data.rs  mod.rs  msr.rs  smp.rs  topology.rs  tsc.rs
hal-x86_64/src/framebuffer/: embedded_graphics.rs  mod.rs
hal-x86_64/src/interrupt/: apic.rs  idt.rs  mod.rs  pic.rs  pit.rs
hal-x86_64/src/interrupt/apic/: io.rs  ioapic.rs  local.rs
hal-x86_64/src/mm/: mod.rs
hal-x86_64/src/time/: pit.rs  tsc.rs
inoculate/: Cargo.toml
inoculate/src/: cargo.rs  cli.rs  gdb.rs  inoculate.rs  lib.rs  main.rs  qemu.rs  term.rs  trace.rs  xtask.rs
inoculate/src/inoculate/: gdb.rs  qemu.rs
inoculate/src/xtask/: loom.rs  miri.rs  release.rs
maitake/: Cargo.toml  LICENSE  README.md  build.rs
maitake-sync/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
maitake-sync/src/: blocking.rs  lib.rs  loom.rs  mutex.rs  rwlock.rs  semaphore.rs  spin.rs  util.rs  wait_cell.rs  wait_map.rs  wait_queue.rs
maitake-sync/src/blocking/: default_mutex.rs  mutex.rs  rwlock.rs
maitake-sync/src/mutex/: tests.rs
maitake-sync/src/rwlock/: owned.rs  tests.rs
maitake-sync/src/semaphore/: tests.rs
maitake-sync/src/semaphore/tests/: alloc_tests.rs
maitake-sync/src/spin/: mutex.rs  once.rs  rwlock.rs
maitake-sync/src/util/: backoff.rs  fmt.rs  maybe_uninit.rs  wake_batch.rs
maitake-sync/src/wait_map/: tests.rs
maitake-sync/src/wait_map/tests/: alloc_tests.rs  loom.rs
maitake-sync/src/wait_queue/: tests.rs
maitake-sync/src/wait_queue/tests/: alloc_tests.rs  loom.rs
maitake/examples/: tokio-console.rs
maitake/proptest-regressions/timer/: wheel.txt
maitake/proptest-regressions/timer/tests/: fuzz.txt
maitake/src/: future.rs  lib.rs  loom.rs  scheduler.rs  sync.rs  task.rs  time.rs  timer.rs  trace.rs  util.rs  wait.rs
maitake/src/future/: yield_future.rs
maitake/src/scheduler/: steal.rs  tests.rs
maitake/src/scheduler/tests/: alloc.rs  alloc_tests.rs  custom_storage.rs  loom.rs
maitake/src/sync/: broadcast.rs  cell.rs  map.rs  mutex.rs  queue.rs  rwlock.rs  semaphore.rs  tests.rs  wait_cell.rs  wait_map.rs  wait_queue.rs
maitake/src/sync/broadcast/: tests.rs
maitake/src/sync/mutex/: tests.rs
maitake/src/sync/rwlock/: loom.rs  owned.rs  tests.rs
maitake/src/sync/semaphore/: tests.rs
maitake/src/sync/tests/: loom_mutex.rs
maitake/src/sync/wait_map/: tests.rs
maitake/src/sync/wait_queue/: tests.rs
maitake/src/task/: builder.rs  id.rs  join_handle.rs  state.rs  storage.rs  task_list.rs  tests.rs
maitake/src/task/tests/: alloc.rs  alloc_tests.rs  join_handle.rs  loom.rs
maitake/src/time/: clock.rs  sleep.rs  timeout.rs  timer.rs
maitake/src/time/timer/: global.rs  sleep.rs  tests.rs  wheel.rs
maitake/src/timer/: loom.rs  sleep.rs  tests.rs  wheel.rs
maitake/src/timer/tests/: fuzz.rs
maitake/src/util/: wake_batch.rs  wakeset.rs
maitake/src/wait/: cell.rs  dataqueue.rs  map.rs  queue.rs  semaphore.rs
maitake/src/wait/cell/: loom.rs
maitake/src/wait/dataqueue/: tests.rs
maitake/src/wait/map/: tests.rs
maitake/src/wait/queue/: tests.rs
maitake/src/wait/semaphore/: loom.rs  tests.rs
maitake/tests/: join_handle.rs  mutex.rs  static_stub.rs  task_builder.rs  util.rs
maitake/tests/scheduler/: alloc.rs  custom_storage.rs  main.rs
mycotest/: Cargo.toml
mycotest/src/: assert.rs  lib.rs  report.rs  runner.rs
pci/: Cargo.toml  README.md
pci/proptest-regressions/: config.txt
pci/src/: addr.rs  class.rs  config.rs  device.rs  error.rs  express.rs  lib.rs  register.rs
pci/src/device/: bar.rs
trace/: Cargo.toml
trace/src/: buf.rs  color.rs  embedded_graphics.rs  lib.rs  writer.rs
trace/src/embedded_graphics/: text_writer.rs
util/: Cargo.toml  README.md
util-macros/: Cargo.toml
util-macros/src/: lib.rs
util/intrusive/: list.rs
util/proptest-regressions/: bits.txt
util/src/: bits.rs  cell.rs  deferred.rs  error.rs  fmt.rs  intrusive.rs  io.rs  lib.rs  loom.rs  macros.rs  math.rs  mem.rs  sync.rs  testing.rs  trace.rs
util/src/bits/: bitfield.rs  pack.rs
util/src/intrusive/: list.rs  mod.rs  mpsc_queue.rs
util/src/io/: cursor.rs  error.rs  impls.rs  initializer.rs  mod.rs  prelude.rs  util.rs
util/src/math/: constrain.rs
util/src/mem/: maybe_uninit.rs
util/src/sync/: cache_pad.rs  cell.rs  init_once.rs  mod.rs  mutex.rs  once.rs  single_init.rs  spin.rs  tearable.rs
util/src/sync/spin/: backoff.rs  (+1 more)
(+77 files in other folders)
