[workspace]
members = [
    "alloc",
    "util",
    "hal-core",
    "hal-x86_64",
    "inoculate",
    "mycotest",
    "trace",
]

[package]
name = "mycelium-kernel"
version = "0.0.1"
authors = ["Eliza Weisman <eliza@elizas.website>"]
edition = "2018"

[lib]
name = "mycelium_kernel"
harness = false

[[bin]]
name = "mycelium_kernel"
path = "src/main.rs"
test = false

[dependencies]
hal-core = { path = "hal-core", features = ["embedded-graphics-core"] }
mycelium-alloc = { path = "alloc", features = ["buddy", "bump"] }
mycelium-util = { path = "util" }
mycelium-trace = { path = "trace", features = ["embedded-graphics"] }
rlibc = "1.0"
# NOTE FOR FUTURE ELIZAS WHO ARE MESSING WITH THIS: the bootloader crate's build
# script is not that good, and breaks if you put this in `cfg(...).dependencies`
# instead of normal [dependencies]. don't move this.
bootloader = { version = "0.10.6" }
embedded-graphics = "0.7"

[dev-dependencies]
mycotest = { path = "mycotest" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
hal-x86_64 = { path = "hal-x86_64" }
yaxpeax-x86 = { version = "1.0.0", default-features = false, features = ["fmt"] }
yaxpeax-arch = { version = "0.2.0", default-features = false }

[dependencies.tracing]
version = "0.1"
default_features = false
features = ["attributes"]

[dependencies.wasmi]
git = "https://github.com/mystor/wasmi"
branch = "mycelium-v0.9.0"
default-features = false
features = ["core"]

[dependencies.parity-wasm]
version = "0.42"
default-features = false
features = ["reduced-stack-buffer"]

[build-dependencies]
wat = "1.0"

[package.metadata.bootloader]
map-physical-memory = true
map-page-table-recursively = true
# map-framebuffer = true

[package.metadata.target.'cfg(target_arch = "x86_64")'.cargo-xbuild]
memcpy = true
sysroot_path = "target/x86_64/sysroot"
