[workspace]
members = [
    "alloc",
    "bitfield",
    "cordyceps",
    "util",
    "hal-core",
    "hal-x86_64",
    "inoculate",
    "maitake",
    "mycotest",
    "trace",
]
resolver = "2"

[package]
name = "mycelium-kernel"
version = "0.0.1"
authors = ["Eliza Weisman <eliza@elizas.website>"]
edition = "2018"
license = "MIT"

[lib]
name = "mycelium_kernel"
harness = false

[[bin]]
name = "mycelium_kernel"
path = "src/main.rs"
test = false

[profile.dev]
opt-level = 3

[dependencies]
hal-core = { path = "hal-core", features = ["embedded-graphics-core"] }
mycelium-alloc = { path = "alloc", features = ["buddy", "bump"] }
maitake = { path = "maitake", features = ["tracing-02"] }
mycelium-util = { path = "util" }
mycelium-trace = { path = "trace", features = ["embedded-graphics"] }
rlibc = "1.0"
# NOTE FOR FUTURE ELIZAS WHO ARE MESSING WITH THIS: the bootloader crate's build
# script is not that good, and breaks if you put this in `cfg(...).dependencies`
# instead of normal [dependencies]. don't move this.
bootloader = { version = "0.10.12" }
embedded-graphics = "0.7"
mycotest = { path = "mycotest" }

[dev-dependencies]
mycotest = { path = "mycotest", features = ["runner"] }

[target.'cfg(target_arch = "x86_64")'.dependencies]
hal-x86_64 = { path = "hal-x86_64" }
yaxpeax-x86 = { version = "1.0.0", default-features = false, features = ["fmt"] }
yaxpeax-arch = { version = "0.2.0", default-features = false }

[dependencies.tracing]
default_features = false
features = ["attributes", "alloc"]
git = "https://github.com/tokio-rs/tracing"

[dependencies.wasmi]
git = "https://github.com/hawkw/wasmi"
branch = "mycelium-v0.9.0"
default-features = false
features = ["core"]

[dependencies.parity-wasm]
version = "0.42"
default-features = false
features = ["reduced-stack-buffer"]

[build-dependencies]
wat = "1.0"

[package.metadata.bootloader]
map-physical-memory = true
map-page-table-recursively = true
# map-framebuffer = true

[package.metadata.target.'cfg(target_arch = "x86_64")'.cargo-xbuild]
memcpy = true
sysroot_path = "target/x86_64/sysroot"

[patch.crates-io]
# use `tracing` 0.2 from git
tracing = { git = "https://github.com/tokio-rs/tracing" }
tracing-core = { git = "https://github.com/tokio-rs/tracing" }
# temporary patch to use my branch of `volatile` until PR
# https://github.com/rust-osdev/volatile/pull/25 merges upstream. this is
# necessary to build with unstable features on recent nightlies.
volatile = { git = "https://github.com/hawkw/volatile", branch = "eliza/update-features" }

# Custom profile for Loom tests: enable release optimizations so that the loom
# tests are less slow, but don't disable debug assertions.
[profile.loom]
inherits = "test"
lto = true
opt-level = 3