[package]
name = "mycelium-alloc"
version = "0.1.0"
authors = [
    "Nika Layzell <nika@thelayzells.com>",
    "Eliza Weisman <eliza@elizas.website>",
]
edition = "2021"
license = "MIT"

[features]
bump = []
buddy = ["hal-core", "mycelium-util", "tracing"]

[dependencies]
tracing = { git = "https://github.com/tokio-rs/tracing", default_features = false, optional = true }
mycelium-util = { path = "../util", optional = true }
hal-core = { path = "../hal-core", optional = true }
