[package]
name = "mycelium-bitfield"
version = "0.1.5"
edition = "2021"
authors = [
    "Eliza Weisman <eliza@elizas.website>",
]
license = "MIT"
rust-version = "1.61.0"
readme = "README.md"

repository = "https://github.com/hawkw/mycelium"
documentation = "https://docs.rs/mycelium-bitfield"
homepage = "https://mycelium.elizas.website"
description = "Structured bitfields, courtesy of Mycelium."
categories = ["data-structures", "encoding", "parsing", "no-std"]
keywords = ["bitfield", "bit", "bits", "bitfields", "bitflags"]

[dev-dependencies]
proptest = "1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)', 'cfg(trace_macros)'] }
