[package]
name = "cordyceps"
version = "0.3.1"
edition = "2021"
description = "Mycelium intrusive data structures."
authors = ["Eliza Weisman <eliza@elizas.website>"]
documentation = "https://docs.rs/cordyceps"
license = "MIT"
repository = "https://github.com/hawkw/mycelium"
homepage = "https://mycelium.elizas.website"
readme = "README.md"
keywords = ["intrusive", "no_std", "list", "queue", "lock-free"]
categories = ["data-structures", "no-std"]
rust-version = "1.61.0"

[features]
default = []
alloc = []
std = ["alloc"]

# Inhibits cache padding for the `CachePadded` struct used for many linked list pointers
# When this feature is NOT enabled, the size will be determined based on target platform.
# See the documentation of `CachePadded` for more details.
no-cache-pad = []

[dev-dependencies]
proptest = "1"
pin-project = "1"
tracing_01 = { package = "tracing", version = "0.1", default_features = false }

[dev-dependencies.tracing_02]
package = "tracing"
default_features = false
git = "https://github.com/tokio-rs/tracing"

[target.'cfg(not(loom))'.dev-dependencies]
tracing-subscriber = { git = "https://github.com/tokio-rs/tracing", features = ["ansi", "fmt"] }

[target.'cfg(loom)'.dependencies]
loom = "0.5.5"

[target.'cfg(loom)'.dev-dependencies]
loom = { version = "0.5.5", features = ["futures", "checkpoint"] }
tracing_subscriber_03 = { package = "tracing-subscriber", version = "0.3.11", features = ["fmt"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
