[package]
name = "cordyceps"
version = "0.3.4"
edition = "2021"
description = "Mycelium intrusive data structures."
authors = ["Eliza Weisman <eliza@elizas.website>"]
documentation = "https://docs.rs/cordyceps"
license = "MIT"
repository = "https://github.com/hawkw/mycelium"
homepage = "https://mycelium.elizas.website"
readme = "README.md"
keywords = ["intrusive", "no_std", "list", "queue", "lock-free"]
categories = ["data-structures", "no-std"]
rust-version = "1.61.0"

[features]
default = []
alloc = []
std = ["alloc"]

# Inhibits cache padding for the `CachePadded` struct used for many linked list pointers
# When this feature is NOT enabled, the size will be determined based on target platform.
# See the documentation of `CachePadded` for more details.
no-cache-pad = []

[dev-dependencies]
proptest = "1"
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["fmt"] }
pin-project = "1"

[target.'cfg(loom)'.dependencies]
loom = "0.7"
tracing = { version = "0.1" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)']}
