[package]
name = "hal-core"
version = "0.1.0"
authors = ["Eliza Weisman <eliza@elizas.website>", "iximeow <git@iximeow.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { git = "https://github.com/tokio-rs/tracing",  default_features = false }
mycelium-util = { path = "../util" }
embedded-graphics-core = { version = "0.3", optional = true }
