[package]
name = "hal-core"
version = "0.1.0"
authors = ["Eliza Weisman <eliza@elizas.website>", "iximeow <git@iximeow.net>"]
edition = "2021"
license = "MIT"
rust-version = "1.81.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { git = "https://github.com/tokio-rs/tracing", default_features = false }
thiserror = { workspace = true }
maitake-sync = { path = "../maitake-sync", default-features = false }
mycelium-util = { path = "../util" }
embedded-graphics-core = { version = "0.3", optional = true }
