[package]
name = "inoculate"
version = "0.1.0"
edition = "2018"
description = """
the horrible mycelium build tool (because that's a thing we have to have now apparently!)
"""
license = "MIT"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = "1"
cargo_metadata = "0.15"
clap = { version = "3", features = ["derive", "env"] }
clap-cargo = { version = "0.9.1", features = ["cargo_metadata"] }
tracing = "0.1.23"
tracing-subscriber = { version = "0.3.1", features = ["env-filter"] }
tracing-error = "0.2"
color-eyre = "0.6"
bootloader-locator = "0.0.4"
locate-cargo-manifest = "0.2"
wait-timeout = "0.2"
owo-colors = "2.0.0"
atty = "0.2"
mycotest = { path = "../mycotest", features = ["alloc"] }
heck = "0.3.3"
semver = "1.0"