[package]
name = "inoculate"
version = "0.1.0"
edition = "2018"
description = """
the horrible mycelium build tool (because that's a thing we have to have now apparently!)
"""
license = "MIT"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive", "env"] }
tracing = "0.1.23"
tracing-subscriber = "0.3.16"
tracing-error = "0.2"
color-eyre = "0.6"
bootloader = "0.11.2"
bootloader-boot-config = "0.11.3"
locate-cargo-manifest = "0.2"
wait-timeout = "0.2"
owo-colors = "3.5.0"
atty = "0.2"
mycotest = { path = "../mycotest", features = ["alloc"] }
heck = "0.3.3"
# used for UEFI booting in QEMU
ovmf-prebuilt = "0.1.0-alpha.1"