[package]
name = "mycotest"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
alloc = []
runner = ["mycelium-trace"]

[dependencies.tracing]
version = "0.1"
default-features = false
features = ["attributes"]

[dependencies]
mycelium-trace = { path = "../trace", optional = true }