[package]
name = "mycelium-pci"
version = "0.1.0"
authors = ["Eliza Weisman <eliza@elizas.website>"]
description = """
    Mycelium's hardware abstraction layer for PCI and PCI Express busses.
"""
repository = "https://github.com/hawkw/mycelium"
documentation = "https://mycelium.elizas.website/mycelium-pci"
homepage = "https://mycelium.elizas.website"
license = "MIT"
readme = "README.md"
keywords = ["no_std", "pci", "pcie"]
categories = ["no-std",]
edition = "2021"
rust-version = "1.61.0"

[dependencies]
mycelium-util = { path = "../util" }
mycelium-bitfield = { path = "../bitfield" }
hal-x86_64 = { path = "../hal-x86_64" }
volatile = "0.4.5"
pci-ids = "0.2.5"
hex = { version = "0.4.3", default-features = false }

[dependencies.tracing]
default-features = false
features = ["attributes", "alloc"]
git = "https://github.com/tokio-rs/tracing"

[dev-dependencies]
proptest = "1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)']}
