[package]
name = "mycelium-trace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-core = { version = "0.1.20", default_features = false }
hal-core = { path = "../hal-core" }
mycelium-util = { path = "../util" }

embedded-graphics = { version = "0.7", optional = true }
