[package]
name = "mycelium-util"
version = "0.1.0"
authors = ["Eliza Weisman <eliza@elizas.website>"]
edition = "2018"
rust-version = "1.61.0"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
alloc = ["cordyceps/alloc"]

[dependencies]
tracing = { git = "https://github.com/tokio-rs/tracing", default_features = false, features = ["attributes"] }
cordyceps = { path = "../cordyceps", default-features = false }

[dev-dependencies]
proptest = "1"
tracing-subscriber = { git = "https://github.com/tokio-rs/tracing" }
tracing = { git = "https://github.com/tokio-rs/tracing", default_features = false, features = ["attributes", "std"] }

[target.'cfg(loom)'.dependencies]
loom = "0.5.5"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]