[package]
name = "mycelium-util"
version = "0.1.0"
authors = ["Eliza Weisman <eliza@elizas.website>"]
edition = "2021"
rust-version = "1.61.0"
readme = "README.md"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
alloc = ["cordyceps/alloc", "maitake-sync/alloc"]
no-cache-pad = ["cordyceps/no-cache-pad", "maitake-sync/no-cache-pad"]

[dependencies]
tracing = { git = "https://github.com/tokio-rs/tracing", default_features = false, features = ["attributes"] }
cordyceps = { path = "../cordyceps", default-features = false }
mycelium-bitfield = { path = "../bitfield", default-features = false }
maitake-sync = { path = "../maitake-sync", default-features = false }

[dev-dependencies]
proptest = "1"
tracing-subscriber = { git = "https://github.com/tokio-rs/tracing", features = ["fmt", "env-filter"]  }
tracing = { git = "https://github.com/tokio-rs/tracing", default_features = false, features = ["attributes", "std"] }

[target.'cfg(loom)'.dependencies]
loom = "0.5.5"

[target.'cfg(loom)'.dev-dependencies]
tracing_01 = { package = "tracing", version = "0.1.36" }
tracing-subscriber_03 = { package = "tracing-subscriber", version = "0.3.15", features = ["fmt", "env-filter"] }


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
